--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -32,7 +32,7 @@
 
     <div class="content">
       <div class="content-title">
-        <h3>ONLINE VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
+        <h3>BLOCKCHAIN-BASED VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
       </div>
       <div class="content-main">
         <div class="card box-shadow">
@@ -58,7 +58,7 @@
             <button type="button" id="sendOtpButton" class="btn">Send OTP</button>
             
             <button class="btn" type="submit">Log in</button>
-            <a href="#" class="btn-link">Forgot your password?</a>
+            <!-- <a href="#" class="btn-link">Forgot your password?</a> -->
           </form>
         </div>
         <br />
