--- a/views/admin/blockchain-activity-log.ejs
+++ b/views/admin/blockchain-activity-log.ejs
@@ -30,6 +30,11 @@
                   <i class="fa fa-link"></i>
             <h1 class="title">Blockchain Activity Log</h1>
           </div>
+            <h3 class="top">      
+              <a class="link" href="https://amoy.polygonscan.com/address/0xdd70759c1166a90c30c5115db0188d31b5d331da" target="_blank">
+                View TANIKALA Transactions on the Blockchain <span><i class="fa-solid fa-magnifying-glass"></i></span> 
+              </a>
+            </h3>
   
         </div>
         <hr class="title-line" />
