--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -112,36 +112,7 @@
     <p id="timeMessage"><%- timeMessage %></p>
   </div>
   <div class="header-user">
-      <div class="warning-container">
-    <i class="fa fa-exclamation-triangle warning" aria-hidden="true"></i>
-    <div class="warning-dropdown">
-      <div class="triangle"></div>
-      <div class="dropdown-content">
-    <% 
-      // Determine which current time to use: fake or real
-      const currentTimeForDropdown = (electionConfig && electionConfig.useFakeDate && electionConfig.fakeCurrentDate)
-        ? moment.tz(electionConfig.fakeCurrentDate, "Asia/Manila")
-        : moment.tz(new Date(), "Asia/Manila");
-
-      // Check if candidates have not been submitted
-      const candidatesNotSubmitted = (electionConfig && electionConfig.candidatesSubmitted === false);
-
-      // Determine if there is 1 day or less until voting starts (if voteStart exists)
-      let oneDayLeft = false;
-      if (voteStart) {
-        const diffMs = voteStart.diff(currentTimeForDropdown);
-        oneDayLeft = diffMs <= moment.duration(1, "day").asMilliseconds();
-      }
-    %>
-    <% if(candidatesNotSubmitted && oneDayLeft) { %>
-      <p>The voting period will start in less than 24 hours, but you haven’t submitted candidates to the blockchain yet. Please submit them now.</p>
-    <% } else { %>
-      <p>No warnings.</p>
-    <% } %>
-  </div>
-
-    </div>
-  </div>
+     
           <img src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
           <div class="profile">
             <div class="admin-name"><%= loggedInAdmin.name %></div>
@@ -177,8 +148,8 @@
         timeMessage = `Time Until Registration: <strong>${Math.floor(duration.asHours())}h ${duration.minutes()}m ${duration.seconds()}s</strong>`;
       } else if (regStart && regEnd && currentTime.isBetween(regStart, regEnd, null, '[)')) {
         headerStatus += " | Registration Period";
-        timeMessage = `<strong>Start Date:</strong> ${regStart.format("MMMM DD, YYYY [AT] hh:mm A")}<br>
-                       <strong>End Date:</strong> ${regEnd.format("MMMM DD, YYYY [AT] hh:mm A")}`;
+        timeMessage = `<strong>Start Date:</strong> ${regStart.format("MMMM DD, YYYY [at] hh:mm A")}<br>
+                       <strong>End Date:</strong> ${regEnd.format("MMMM DD, YYYY [at] hh:mm A")}`;
       } else if (regEnd && voteStart && currentTime.isBetween(regEnd, voteStart, null, '[)')) {
         headerStatus += " | Waiting for Voting Period";
         const diffMs = voteStart.diff(currentTime);
@@ -186,8 +157,8 @@
         timeMessage = `Time Until Voting: <strong>${Math.floor(duration.asHours())}h ${duration.minutes()}m ${duration.seconds()}s</strong>`;
       } else if (voteStart && voteEnd && currentTime.isBetween(voteStart, voteEnd, null, '[)')) {
         headerStatus += " | Voting Period";
-        timeMessage = `<strong>Start Date:</strong> ${voteStart.format("MMMM DD, YYYY [AT] hh:mm A")}<br>
-                       <strong>End Date:</strong> ${voteEnd.format("MMMM DD, YYYY [AT] hh:mm A")}`;
+        timeMessage = `<strong>Start Date:</strong> ${voteStart.format("MMMM DD, YYYY [at] hh:mm A")}<br>
+                       <strong>End Date:</strong> ${voteEnd.format("MMMM DD, YYYY [at] hh:mm A")}`;
       } else if (voteEnd && currentTime.isAfter(voteEnd)) {
         headerStatus += " | Results Double Checking Period";
         timeMessage = `<strong>Waiting For Results</strong>`;
