--- a/views/homepages/rvs-election-results.ejs
+++ b/views/homepages/rvs-election-results.ejs
@@ -42,7 +42,7 @@
 
     <div class="content">
       <div class="content-title">
-        <h3 class="h3" style="text-transform: uppercase">Welcome to the Bulacan State University Student Government Elections - Results Verification Portal!</h3>
+        <h3 class="h3 why" style="text-transform: uppercase">Welcome to the Bulacan State University Student Government Elections - Results Verification Portal!</h3>
       </div>
 
       <div class="content-main">
@@ -55,8 +55,8 @@
           <ul class="header-nav-content">
             <li><a href="/rvs-about">About</a></li>
             <li><a href="/rvs-voter-turnout">Voter Turnout</a></li>
-            <li><a href="/rvs-votes-per-candidate" id="active-link2">Votes per Candidate</a></li>
-            <li><a href="/rvs-election-results">Election Results</a></li>
+            <li><a href="/rvs-votes-per-candidate">Votes per Candidate</a></li>
+            <li><a href="/rvs-election-results" id="active-link2">Election Results</a></li>
           </ul>
           
         </div>
