--- a/views/homepages/rvs-voter-turnout.ejs
+++ b/views/homepages/rvs-voter-turnout.ejs
@@ -59,8 +59,8 @@
           </div>
           <ul class="header-nav-content">
             <li><a href="/rvs-about">About</a></li>
-            <li><a href="/rvs-voter-turnout">Voter Turnout</a></li>
-            <li><a href="/rvs-votes-per-candidate" id="active-link2">Votes per Candidate</a></li>
+            <li><a href="/rvs-voter-turnout" id="active-link2">Voter Turnout</a></li>
+            <li><a href="/rvs-votes-per-candidate">Votes per Candidate</a></li>
             <li><a href="/rvs-election-results">Election Results</a></li>
           </ul>
           
