--- a/views/homepages/rvs-votes-per-candidate.ejs
+++ b/views/homepages/rvs-votes-per-candidate.ejs
@@ -110,7 +110,7 @@
 
     <div class="content">
       <div class="content-title">
-        <h3 class="h3" style="text-transform: uppercase">Welcome to the BulSU Student Government Elections - Results Verification Portal!</h3>
+        <h3 class="h3" style="text-transform: uppercase">Welcome to the Bulacan State University Student Government Elections - Results Verification Portal!</h3>
       </div>
 
       <div class="content-main">
