--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -27,7 +27,7 @@
     <script>
       bigPopup(
         "VOTE SUBMISSION<br />SUCCESSFUL",
-        "Thank you for casting your vote! Your vote has been successfully recorded on the blockchain. Click 'Next' to view your voter transaction receipt.",
+        "Thank you for casting your vote! Your vote has been successfully recorded on the blockchain. Click 'Next' to view your voting receipt.",
         {
           imageSrc: "/components/popup-checkmark.png",
           buttonText: "Next",
