--- a/public/admin/css/admin-login.css
+++ b/public/admin/css/admin-login.css
@@ -53,6 +53,7 @@
   background: var(--color-mediumYellow);
   border-radius: 1.5rem;
   color: black;
+  padding-bottom: 2rem;
   /* margin-bottom: 2rem; */
 }
 
