--- a/public/admin/css/archives.css
+++ b/public/admin/css/archives.css
@@ -1,15 +1,9 @@
 table {
-  outline: 2px solid #245414;
+  outline: 2px solid #323847;
 }
 
 th {
-  background-color: #245414;
+  background: #364150;
 }
 
-/* tr:nth-child(odd) {
-  background-color: #faf2db;
-}
-
-tr:nth-child(even) {
-  background-color: #f2ddb4;
-} */
+/* 
