--- a/public/admin/css/election-reset.css
+++ b/public/admin/css/election-reset.css
@@ -12,15 +12,23 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: #f8eac2;
-  border: 0.25rem solid #80550c;
+  background: #f3e9d2;
+  border: 0.15rem solid #1e20239e;
   border-radius: 1.5rem;
   padding: 2rem;
 }
 
 .text-field {
-  background: #d8ac65;
+  min-width: 70%;
+  height: 2rem;
+  background-color: white;
+  color: black;
   border: none;
+  border-radius: 0.5rem;
+  border: 0.03rem solid #28303b9d;
+  padding: 0 3%;
+  /* margin: 1rem; */
+  outline: 0;
 }
 
 .image {
