--- a/public/css/mobile-votes-per-candidate.css
+++ b/public/css/mobile-votes-per-candidate.css
@@ -156,4 +156,9 @@
   .progress p {
     font-size: 0.75rem !important;
   }
+
+  .header-nav h2 {
+    text-align: right;
+    font-size: 0.85rem !important;
+  }
 }
