--- a/views/admin/election-reset.ejs
+++ b/views/admin/election-reset.ejs
@@ -32,7 +32,7 @@
             <p>Enter Account Password:</p>
             <input type="password" id="super-admin-password" class="text-field" name="super-admin-password" required />
             <br /><br />
-            <button type="button" id="sendOtpButton" class="">Send OTP</button>
+            <button type="button" id="sendOtpButton" class="button button-brown">Send OTP</button>
             
             
 
