--- a/views/homepages/rvs-about.ejs
+++ b/views/homepages/rvs-about.ejs
@@ -40,9 +40,9 @@
             </p>
           </div>
           <ul class="header-nav-content">
-            <li><a href="/rvs-about">About</a></li>
+            <li><a href="/rvs-about" id="active-link2">About</a></li>
             <li><a href="/rvs-voter-turnout">Voter Turnout</a></li>
-            <li><a href="/rvs-votes-per-candidate" id="active-link2">Votes per Candidate</a></li>
+            <li><a href="/rvs-votes-per-candidate">Votes per Candidate</a></li>
             <li><a href="/rvs-election-results">Election Results</a></li>
           </ul>
           
