--- a/views/voter/footer.ejs
+++ b/views/voter/footer.ejs
@@ -5,7 +5,7 @@
 <footer class="footer">
     <div class="footer-left">
       <img src="img/calendar.png" class="footer-img" />
-     <p> <span id="footerTime"></span></p>
+      <p><span id="footerTime"></span></p>
     </div>
 
     <div class="footer-center">
@@ -13,14 +13,15 @@
       <p>2025 - Fourmula 1</p>
     </div>
 
-    <div class="footer-right">
-        <!-- <img src="img/log-in.png" class="footer-img" id="admin-img" />
+    <!-- <div class="footer-right">
+        <img src="img/log-in.png" class="footer-img" id="admin-img" />
         <p>Admin? Log in&nbsp;</p>
-        <a href="/admin-login"> here.</a> -->
-    </div>
+        <a href="/admin-login"> here.</a>
+    </div> -->
   </footer>
 
   <script>
+    const config = <%- JSON.stringify(electionConfig) %>;
     function updateFooterTime() {
       // Use the fake current date if useFakeDate is true and fakeCurrentDate exists in config.
       let currentTime;
@@ -35,6 +36,8 @@
       const formattedTime = currentTime.format("MMMM DD, YYYY [AT] hh:mm A").toUpperCase();
       document.getElementById("footerTime").textContent = formattedTime;
     }
+
+    console.log("Use Fake Date", config.useFakeDate);
   
     updateFooterTime();
     setInterval(updateFooterTime, 30000);
